--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,1 @@
-limit-service:
-    minimum: 100
-limit-service: 
-    maximum: 1000
+insurance.provider.url=http://localhost:8080/insurance-service/getAllPlans
